--- a/Giorno2/base_di_partenza/assets/css/style.css
+++ b/Giorno2/base_di_partenza/assets/css/style.css
@@ -148,17 +148,7 @@ h1 + p {
     font-size: 1.8rem;
     font-weight: 700;
   }
-
-  .container2r{position: relative;
-    display:inline-block;}
-    .container2r::after{
-      content: url("/base_di_partenza/assets/img/underline.svg");
-      display: block;
-      width: 100%;
-      height: auto;
-     
-    }
-    
+  
 }
 
 @media screen and (min-width: 500px) {
@@ -176,23 +166,14 @@ h1 + p {
     font-size: 1.4rem;
     font-weight: 700;
   }
-
-  .container2r{position: relative;
-    display:inline-block;}
-    .container2r::after{
-      content: url("/base_di_partenza/assets/img/underline.svg");
-      display: block;
-      width: 100%;
-      height: auto;
-      margin-left: 15px;
-    }
+  
 }
 
 @media screen and (min-width: 700px) {
   h1 {
     font-size: 3.6rem;
   }
-  .container2r{position: relative;
+  /* .container2r{position: relative;
     display:inline-block;}
     .container2r::after{
       content: url("/base_di_partenza/assets/img/underline.svg");
@@ -200,7 +181,7 @@ h1 + p {
       width: 100%;
       height: auto;
       margin-left: 60px;
-    }
+    } */
 }
 
 @media screen and (min-width: 1200px) {
@@ -210,7 +191,7 @@ h1 + p {
   section {
     border-radius: 20px;
   }
-  .container2r{position: relative;
+  /* .container2r{position: relative;
     display:inline-block;}
     .container2r::after{
       content: url("/base_di_partenza/assets/img/underline.svg");
@@ -218,7 +199,7 @@ h1 + p {
       width: 100%;
       height: auto;
       margin-left: 520px;
-    }
+    } */
 }
 
 .imgLeft {
@@ -428,25 +409,28 @@ footer a {
 
 
 /* esercizi giorno 2 */
-
-#container1 {overflow: hidden;}
 #float1 {float: left;}
 #clear{clear: both;}
 
-/* .container2r{position: relative;
-display:inline-block;}
-.container2r::after{
-  content: url("/base_di_partenza/assets/img/underline.svg");
-  display: block;
-  width: 100%;
-  height: auto;
-  margin-top: 5px;
-} */
+h1 span {
+  position: relative;
+  z-index: 0;
+  white-space: nowrap;
+}
 
+h1 img {
+  z-index: -1;
+  position: absolute;
+  top: 80%;
+  left: 0;
+  right: 0;
+  width: 100%;
+  opacity: 0.6;
+}
 
 #container3{ position: sticky;
 top: 0;
-z-index: 2;}
+z-index: 1;}
 
 #container4r {position: relative;}
 #container4a {position: absolute;
@@ -458,10 +442,10 @@ right: 6px;
 width: fit-content;}
 
 
- #containerbottoni {position: fixed;
+ /* #containerbottoni {position: fixed;
   top: 50%;
   right: 0;
-z-index: 1;}
+z-index: 2;}
   #bottone1 {position: absolute;
   right: 0;
   
@@ -472,7 +456,7 @@ z-index: 1;}
     #bottone3 {position: absolute;
       right: 0;
       top: 140px;
-  }  
+  }   */
 
 
 .bottoniblu{
@@ -489,4 +473,39 @@ border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border: 2px solid white;
   border-radius: 10px;
+  }
+
+  @media screen and (max-width: 700px) {
+    #containerbottoni {position: fixed;
+      top: 70%;
+      right: 0;
+    z-index: 2;}
+      #bottone1 {position: absolute;
+      right: 0;
+      
+      }
+      #bottone2 {position: absolute;
+        right: 0;
+        top: 70px;}
+        #bottone3 {position: absolute;
+          right: 0;
+          top: 140px;
+      }  
+  }
+  @media screen and (min-width: 701px) {
+    #containerbottoni {position: fixed;
+      top: 10%;
+      right: 0;
+    z-index: 2;}
+      #bottone1 {position: absolute;
+      right: 0;
+      
+      }
+      #bottone2 {position: absolute;
+        right: 0;
+        top: 70px;}
+        #bottone3 {position: absolute;
+          right: 0;
+          top: 600px;
+      }  
   }
